--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jwt-cookie-passer": "^2.0.0",
     "logger-plus-plus": "^1.0.0",
     "no-extension": "^1.0.2",
+    "socket-hub": "^2.1.2",
+    "src-string": "^1.0.0",
     "storming": "^1.0.0",
     "youser": "^1.0.0"
   }
